<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Laikkmain" >

    <TextView 
        android:id="@+id/title"
        android:layout_width="fill_parent"   
        android:layout_height="wrap_content"   
        android:gravity="center_horizontal"
        android:textSize="25sp"
        android:text="@string/login"  
        />
    <TextView 
        android:layout_below="@id/title"
         android:id="@+id/usernametitle"
        android:layout_width="fill_parent"   
        android:layout_height="wrap_content"   
        android:text="@string/loginname"  
        android:textSize="20sp"
        />
     <EditText 
         android:layout_below="@id/usernametitle"
         android:id="@+id/username"
         android:layout_width="fill_parent"   
         android:layout_height="wrap_content"  
         android:inputType="text" 
         />
     <TextView 
         android:layout_below="@id/username"
         android:id="@+id/passwordtitle"
         android:layout_width="fill_parent"   
         android:layout_height="wrap_content"   
          android:textSize="20sp"
         android:text="@string/password"  
         />
     <EditText 
         android:layout_below="@id/passwordtitle"
         android:id="@+id/password"
        android:layout_width="fill_parent"   
    android:layout_height="wrap_content"    
      android:inputType="textPassword"
         />
     <Button 
         android:layout_below="@id/password"
         android:id="@+id/submit"
         android:layout_margin="10dip"
         android:layout_width="fill_parent"   
         android:layout_height="wrap_content"    
         android:background="@drawable/login"
         />
</RelativeLayout>