<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

 <ScrollView 
     xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
     >
     
  
    

<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:shrinkColumns="*"    
    android:stretchColumns="*"
     >    
<TableRow    
        android:id="@+id/ad_top"    
        android:layout_height="wrap_content"    
        android:layout_width="match_parent"    
        android:gravity="center_horizontal">    
        <TextView    
            android:id="@+id/textViewtop"    
            android:layout_width="match_parent"    
            android:layout_height="wrap_content"    
            android:textStyle="bold"    
            android:typeface="serif"    
            android:textSize="18sp"    
            android:text="@string/ad_top"
            android:gravity="center"    
            android:layout_span="6"></TextView>   
    </TableRow> 
    <TableRow    
        android:id="@+id/tableRow1"    
        android:layout_height="wrap_content"    
        android:layout_width="match_parent"    
        android:gravity="center_horizontal">    
        <TextView    
            android:id="@+id/textView1_1"    
            android:layout_width="match_parent"    
            android:layout_height="wrap_content"  
             
            android:textStyle="bold"    
            android:typeface="serif"    
            android:textSize="18sp"    
            android:text="@string/adtitle"
            android:gravity="right"    
            android:layout_span="4"
             >
        </TextView>  
        <EditText 
            android:id="@+id/textView1_2_title"    
            android:layout_width="match_parent"    
            android:layout_height="wrap_content"  
            android:layout_weight="3"  
            android:textStyle="bold"    
            android:typeface="serif" 
            android:inputType="text"   
            android:textSize="18sp"    
            android:gravity="left"    
            android:layout_span="8"
            android:layout_marginRight="10dip"
            />   
    </TableRow>  
<TableRow    
        android:id="@+id/tableRow2"    
        android:layout_height="wrap_content"    
        android:layout_width="match_parent"    
        android:gravity="center_horizontal">    
        <TextView    
            android:id="@+id/textView2_1"    
            android:layout_width="match_parent"    
            android:layout_height="wrap_content"    
            android:textStyle="bold"    
            android:typeface="serif"    
            android:textSize="18sp"    
            android:text="@string/addesc"
            android:gravity="right"    
            android:layout_span="4"></TextView>  
            <EditText 
            android:id="@+id/textView2_2_contentShort"    
            android:layout_width="match_parent"    
            android:layout_height="80dip"    
            android:textStyle="bold"    
            android:typeface="serif" 
            android:inputType="text"   
            android:textSize="18sp"    
            android:gravity="top"  
            android:singleLine="false"  
            android:maxLines="5"
            android:layout_span="8"
            android:layout_marginRight="10dip"
            />     
    </TableRow>     
    <TableRow    
        android:id="@+id/tableRow3_1"    
        android:layout_height="wrap_content"    
        android:layout_width="match_parent"    
        android:gravity="center_horizontal">    
        <TextView    
            android:id="@+id/textView3_1"    
            android:layout_width="match_parent"    
            android:layout_height="wrap_content"    
            android:textStyle="bold"    
            android:typeface="serif"    
            android:textSize="18sp"    
            android:text="@string/adbodypic"
            android:gravity="right"    
            android:layout_span="4"></TextView>   
             <Button 
            android:id="@+id/content_pic"    
            android:layout_width="match_parent"    
            android:layout_height="wrap_content"    
            android:textStyle="bold"    
            android:typeface="serif"    
            android:textSize="18sp"    
            android:text="@string/adbodypic"
            android:gravity="center"    
            android:layout_span="8"
            android:layout_marginRight="10dip"
          
          />        
    </TableRow>
     <TableRow    
        android:id="@+id/tableRow3_1_1"    
        android:layout_height="wrap_content"    
        android:layout_width="match_parent"    
        android:gravity="center_horizontal">    
        <TextView    
            android:id="@+id/textView3_1_1"    
            android:layout_width="match_parent"    
            android:layout_height="wrap_content"    
            android:textStyle="bold"    
            android:typeface="serif"    
            android:textSize="18sp"
            android:text="图片预览"    
            android:gravity="right"    
            android:layout_span="4"></TextView>    
      <ImageView
           android:id="@+id/contentPic_show"    
            android:layout_width="match_parent"    
            android:layout_height="50dip"    
            android:textStyle="bold"    
            android:typeface="serif"    
            android:textSize="18sp" 
            android:gravity="left"    
            android:layout_span="8"
          
          
          />    
      </TableRow> 
<TableRow    
        android:id="@+id/tableRow3"    
        android:layout_height="wrap_content"    
        android:layout_width="match_parent"    
        android:gravity="center_horizontal">    
        <TextView    
            android:id="@+id/textView3_1"    
            android:layout_width="match_parent"    
            android:layout_height="wrap_content"    
            android:textStyle="bold"    
            android:typeface="serif"    
            android:textSize="18sp"    
            android:text="@string/adbody"
            android:gravity="right"    
            android:layout_span="4"></TextView>   
            <EditText 
            android:id="@+id/textView3_2_content"    
            android:layout_width="fill_parent"    
            android:layout_height="80dip"    
            android:textStyle="bold"    
            android:typeface="serif" 
            android:inputType="text"   
            android:textSize="18sp"    
            android:gravity="top" 
            android:text="@string/ad_content"
            android:singleLine="false"      
            android:layout_span="8"
            android:layout_marginRight="10dip"
            />    
    </TableRow> 
    
     <TableRow    
        android:id="@+id/tableRow4"    
        android:layout_height="wrap_content"    
        android:layout_width="match_parent"    
        android:gravity="center_horizontal">    
        <TextView    
            android:id="@+id/textView4_1"    
            android:layout_width="match_parent"    
            android:layout_height="wrap_content"    
            android:textStyle="bold"    
            android:typeface="serif"    
            android:textSize="18sp"    
            android:text="@string/adpromote"
            android:gravity="right"    
            android:layout_span="4"></TextView> 

            <Spinner
                android:id="@+id/spiView4_2_promotion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dip"
                android:layout_span="8" />
    
    </TableRow> 
<TableRow    
        android:id="@+id/tableRow5"    
        android:layout_height="wrap_content"    
        android:layout_width="match_parent"    
        android:gravity="center_horizontal">    
        <TextView    
            android:id="@+id/textView5_1"    
            android:layout_width="match_parent"    
            android:layout_height="wrap_content"    
            android:textStyle="bold"    
            android:typeface="serif"    
            android:textSize="18sp"    
            android:text="@string/adpromoteprice"
            android:gravity="right"    
            android:layout_span="4"
            />
            <EditText 
            android:id="@+id/textView5_2_pricePro"    
            android:layout_width="match_parent"    
            android:layout_height="wrap_content"    
            android:textStyle="bold"    
            android:typeface="serif" 
            android:inputType="text"   
            android:textSize="18sp"    
            android:gravity="left" 
            android:layout_span="8"   
            android:layout_marginRight="10dip"
            />    
    </TableRow>
    <TableRow    
        android:id="@+id/tableRow6"    
        android:layout_height="wrap_content"    
        android:layout_width="match_parent"    
        android:gravity="center_horizontal">    
        <TextView    
            android:id="@+id/textView6_1"    
            android:layout_width="match_parent"    
            android:layout_height="wrap_content"    
            android:textStyle="bold"    
            android:typeface="serif"    
            android:textSize="18sp"    
            android:text="@string/adprice"
            android:gravity="right"    
            android:layout_span="4"></TextView>   
            <EditText 
            android:id="@+id/textView6_2_price"    
            android:layout_width="match_parent"    
            android:layout_height="wrap_content"    
            android:textStyle="bold"    
            android:typeface="serif" 
            android:inputType="text"   
            android:textSize="18sp"    
            android:gravity="left"    
            android:layout_span="8"
            android:layout_marginRight="10dip"
            />    
    </TableRow>   
    
     <TableRow    
        android:id="@+id/tableRow7"    
        android:layout_height="wrap_content"    
        android:layout_width="match_parent"    
        android:gravity="center_horizontal">    
        <TextView    
            android:id="@+id/textView7_1"    
            android:layout_width="match_parent"    
            android:layout_height="wrap_content"    
            android:textStyle="bold"    
            android:typeface="serif"    
            android:textSize="18sp"    
            android:text="@string/adpic"
            android:gravity="right"    
            android:layout_span="4"></TextView>    
      <Button 
           android:id="@+id/button_file"    
            android:layout_width="match_parent"    
            android:layout_height="wrap_content"    
            android:textStyle="bold"    
            android:typeface="serif"    
            android:textSize="18sp"    
            android:text="@string/adpic"
            android:gravity="center"    
            android:layout_span="8"
            android:layout_marginRight="10dip"
          
          />    
      </TableRow>  
      <TableRow    
        android:id="@+id/tableRow8"    
        android:layout_height="wrap_content"    
        android:layout_width="match_parent"    
        android:gravity="center_horizontal">    
        <TextView    
            android:id="@+id/textView8_1"    
            android:layout_width="match_parent"    
            android:layout_height="wrap_content"    
            android:textStyle="bold"    
            android:typeface="serif"    
            android:textSize="18sp"
            android:text="图片预览"    
            android:gravity="right"    
            android:layout_span="4"></TextView>    
      <ImageView
           android:id="@+id/Pic_show"    
            android:layout_width="match_parent"    
            android:layout_height="50dip"    
            android:textStyle="bold"    
            android:typeface="serif"    
            android:textSize="18sp" 
            android:gravity="left"    
            android:layout_span="8"
          
          
          />    
      </TableRow>  
      <TableRow 
        android:id="@+id/tableRowBotton"    
        android:layout_height="wrap_content"    
        android:layout_width="match_parent"    
        android:gravity="center_horizontal"
          >
          <Button 
           android:id="@+id/buttom_submit"    
            android:layout_width="match_parent"    
            android:layout_height="wrap_content"    
            android:textStyle="bold"    
            android:typeface="serif"    
            android:textSize="18sp"    
            android:text="@string/submit"
            android:gravity="center"    
            android:layout_span="6"
          
          
          />    
          
      </TableRow>   
</TableLayout>
 </ScrollView> 
</LinearLayout>